<resources>
    <string name="app_name">FisioApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="config">Configuration</string>
    <string name="connect">Connect</string>
    <string name="button_exit">Exit</string>
    <string name="ble_not_supported">BLE no soportado en este dispositivo</string>
    <string name="button_connect">Conectar</string>
    <string name="button_cofig">Configuración</string>
    <string name="unknown_device">Desconocido</string>
    <string name="label_device_address">Direccion</string>
    <string name="label_state">Estado</string>
    <string name="disconnected">Desconectado</string>
    <string name="label_data">Data</string>
    <string name="no_data">No Data</string>
    <string name="connected">Conectado</string>
    <string name="unknown_service">Servicio Desconocido</string>
    <string name="unknown_characteristic">Característica desconocida</string>
    <string name="cancel">Cancelar</string>
    <string name="open_location_settings">Activar Localizacion</string>
    <string name="gps_network_not_enabled">Localizacion inhabilitada</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_connect">Conectar</string>
    <string name="menu_disconnect">Desconectar</string>
    <string name="start_acquisition">Start Data Acquisition</string>
    <string name="back">Back</string>
    <string name="bien">Bien</string>
    <string name="reconnect">Reconnect</string>
    <string name="extract_measures">Measures</string>
    <string name="acquiring_message">Acquiring…</string>
    <string name="xaxis_label">Seconds</string>
    <string name="yaxis_label">mV</string>
</resources>