<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="10dp">

    <LinearLayout android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_state"
        android:textSize="18sp"/>
    <Space android:layout_width="5dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/connection_state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/disconnected"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/conn_image"
        android:layout_width="20dp"
        android:layout_height="match_parent"
        android:visibility="invisible"
         />
</LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="219dp">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/linechart_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/rms_value_display"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:gravity="center"
        android:text=""
        android:background="@drawable/text_border"
        android:textSize="20sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/connectButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="connect"
            android:text="@string/reconnect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/StartButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="startAcq"
            android:text="@string/start_acquisition"
            app:layout_constraintEnd_toEndOf="@+id/connectButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/connectButton"
            app:layout_constraintTop_toBottomOf="@+id/connectButton" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="quit"
            android:text="@string/back"
            app:layout_constraintEnd_toEndOf="@+id/StartButton"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/StartButton"
            app:layout_constraintTop_toBottomOf="@+id/StartButton" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/black"
            android:text="@string/bien"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/back_button"
            app:layout_constraintStart_toStartOf="@+id/back_button"
            app:layout_constraintTop_toBottomOf="@+id/back_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>